--- a/zsh/starship.toml
+++ b/zsh/starship.toml
@@ -14,6 +14,9 @@ success_symbol = "[❯](bold white)"
 [git_commit]
 disabled = true
 
+[scala]
+disabled = true
+
 [python]
 disabled = true
 
@@ -47,6 +50,9 @@ disabled = true
 [aws]
 disabled = true
 
+[gcloud]
+disabled = true
+
 [perl]
 disabled = true
 
@@ -57,4 +63,7 @@ disabled = true
 disabled = true
 
 [swift]
+disabled = true
+
+[docker_context]
 disabled = true
